crates/tapir-script/compiler/src/compile/snapshots/compiler__compile__type_visitor__test__symtab_fail_snapshot_tests@incorrect_type_property_fail.tapir.snap
---
source: crates/tapir-script/compiler/src/compile/type_visitor.rs
expression: err_str
input_file: crates/tapir-script/compiler/src/compile/snapshot_tests/type_visitor/incorrect_type_property_fail.tapir
---
Error: Incorrect type, expected int but got fix
   ╭─[ incorrect_type_property_fail.tapir:1:12 ]
   │
 1 │ int_prop = 3.5;
   │            ─┬─  
   │             ╰─── Assigning fix
───╯
